# antislop

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTRUCTION.md  QA_STRATEGY.md  README.md  SECURITY.md  SELF_INTEGRATION.md  action.yml  antislop.toml  book.toml  cliff.toml  deny.toml  dist.toml
.agent/workflows/: add-pattern.md  convert-to-antislop.md  hygiene-check.md
.antislop/profiles/: antislop-standard.toml  antislop-strict.toml  combined.toml  no-stubs.toml  security.toml  strict-comments.toml
.github/: dependabot.yml  labels.yml  release-please-config.json  release-please-manifest.json
.github/workflows/: ci.yml  dependabot-merge.yml  dist.yml  docker.yml  label-sync.yml  lockfile.yml  npm.yml  pages.yml  publish.yml  release-please.yml  release.yml  stale.yml
.marketing/: generate_terminal_html.py  help.html  help.txt  hygiene.html  hygiene.txt  many_findings.html  many_findings.txt  profiles.html  profiles.txt  zero_findings.html  zero_findings.txt
benches/: README.md  scanner.rs
benches/fixtures/go/: clean.go  sloppy.go
benches/fixtures/javascript/: clean.js  sloppy.js
benches/fixtures/python/: clean.py  sloppy.py
benches/fixtures/rust/: clean.rs  sloppy.rs
benches/fixtures/typescript/: clean.ts  sloppy.ts
book/: 404.html  architecture.html  configuration.html  contributing.html  hygiene.html  index.html  installation.html  intro.html  patterns.html  performance.html  philosophy.html  print.html  searcher-c2a407aa.js  searchindex-b76a11ef.js  searchindex-c7644faf.js  toc-75ecf78c.js  toc.html  usage.html
book/docs/theme/: custom-b4ec0ad2.css
book/man/: antislop.1
book/theme/: mermaid-init.js
config/: default.toml
config/patterns/: ast.toml  core.toml  deferral.toml  hedging.toml  hygiene_allowlist.toml  naming.toml  placeholder.toml  stub.toml
crates/antislop-lsp/: Cargo.toml
crates/antislop-lsp/src/: main.rs
data/: hygiene_tools.toml
docs/: SUMMARY.md  architecture.md  configuration.md  contributing.md  hygiene.md  installation.md  intro.md  patterns.md  performance.md  philosophy.md  usage.md
editors/vscode/: .vscodeignore  CHANGELOG.md  package.json
editors/vscode/src/: extension.ts
examples/: sloppy_code.cpp  sloppy_code.cs  sloppy_code.go  sloppy_code.hs  sloppy_code.java  sloppy_code.js  sloppy_code.kt  sloppy_code.lua  sloppy_code.php  sloppy_code.pl  sloppy_code.py  sloppy_code.r  sloppy_code.rb  sloppy_code.rs  sloppy_code.scala  sloppy_code.swift  sloppy_code.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_parse.rs  fuzz_pattern_compile.rs  fuzz_scanner.rs
scripts/: check_overlap.py  coverage.sh  qa.sh  verify_hygiene.sh
src/: config.rs  detect.rs  filename_checker.rs  hygiene.rs  lib.rs  report.rs  walker.rs
src/detector/: mod.rs  patterns.rs  regex_fallback.rs  tree_sitter.rs
src/profile/: cache.rs  mod.rs  validate.rs
src/report/: mod.rs  sarif.rs
tests/: cli_output_tests.rs  edge_cases.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  snapshot_tests.rs
tests/common/: mod.rs
tests/snapshots/: snapshot_tests__clean_code.snap  snapshot_tests__deferral_patterns.snap  snapshot_tests__hedging_patterns.snap  snapshot_tests__json_output.snap  snapshot_tests__json_output_snapshot.snap  snapshot_tests__multiple_findings.snap  snapshot_tests__placeholder_patterns.snap  snapshot_tests__severity_levels.snap  snapshot_tests__stub_patterns.snap
