[workspace]
members = ["crates/antislop-lsp"]
resolver = "2"

[package]
name = "antislop"
version = "0.5.0"
description = "A blazing-fast, multi-language linter for detecting AI-generated code slop"
authors = ["AntiSlop Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/skew202/antislop"
homepage = "https://github.com/skew202/antislop"
documentation = "https://docs.rs/antislop"
keywords = ["linter", "ai", "code-quality", "slop", "static-analysis"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins", "development-tools::profiling"]
edition = "2021"
rust-version = "1.85"

[features]
default = ["standard-langs", "parallel"]
parallel = ["rayon"]
remote-profiles = ["ureq"]

# Grouped Features
standard-langs = ["python", "javascript", "typescript", "rust", "go", "java", "cpp"]
all-langs = ["standard-langs", "c-sharp", "php", "ruby", "haskell", "lua", "scala"]

# Internal base feature
tree-sitter = ["dep:tree-sitter"]

# Individual Language Features
python = ["tree-sitter", "dep:tree-sitter-python"]
javascript = ["tree-sitter", "dep:tree-sitter-javascript"]
typescript = ["tree-sitter", "dep:tree-sitter-typescript"]
rust = ["tree-sitter", "dep:tree-sitter-rust"]
go = ["tree-sitter", "dep:tree-sitter-go"]
java = ["tree-sitter", "dep:tree-sitter-java"]
cpp = ["tree-sitter", "dep:tree-sitter-cpp"]
c-sharp = ["tree-sitter", "dep:tree-sitter-c-sharp"]
php = ["tree-sitter", "dep:tree-sitter-php"]
ruby = ["tree-sitter", "dep:tree-sitter-ruby"]
haskell = ["tree-sitter", "dep:tree-sitter-haskell"]
lua = ["tree-sitter", "dep:tree-sitter-lua"]
scala = ["tree-sitter", "dep:tree-sitter-scala"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "cargo", "unicode"] }
clap_complete = "4.5"
dirs = "5"
globset = "0.4"
ignore = "0.4"
owo-colors = "4.1"
rayon = { version = "1.10", optional = true }
regex = "1.11"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-sarif = "0.8"
streaming-iterator = "0.1"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2.11", optional = true, default-features = false, features = ["tls"] }

# Tree-sitter core and language grammars
tree-sitter = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-haskell = { version = "0.23", optional = true }
tree-sitter-lua = { version = "0.2", optional = true }
tree-sitter-scala = { version = "0.23", optional = true }
# Note: kotlin, perl, r, swift have tree-sitter version conflicts and are disabled

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
snapbox = "0.6"
tempfile = "3.13"
proptest = "1.4"
insta = { version = "1.34", features = ["json"] }

[[bin]]
name = "antislop"
path = "src/bin/antislop.rs"

[lib]
name = "antislop"
path = "src/lib.rs"

[[bench]]
name = "scanner"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
